feaT: add comment post request router & swagger
